fixed a little z-index issue with menu and cart on mobile

--- a/sass/layout/_cart.scss
+++ b/sass/layout/_cart.scss
@@ -12,7 +12,7 @@
   // min-height: 275px;
 
   @include media-lt-400 {
-    z-index: 9999;
+    z-index: 9998;
     width: 95vw;
     top: 5.5rem;
     left: 2.5vw;
